kubernetes/regional/colombia/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-colombia-route
  namespace: staging-colombia
spec:
  parentRefs:
    - name: main-gateway
      namespace: apisix
      sectionName: http
  hostnames:
    - api-colombia.karim-portfolio.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mosquitto-ui-colombia-route
  namespace: staging-colombia
spec:
  parentRefs:
    - name: main-gateway
      namespace: apisix
      sectionName: http
  hostnames:
    - mosquitto-colombia-ui.karim-portfolio.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mosquitto-ui
          port: 8088
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rabbitmq-colombia-route
  namespace: staging-colombia
spec:
  parentRefs:
    - name: main-gateway
      namespace: apisix
      sectionName: http
  hostnames:
    - rabbitmq-colombia.karim-portfolio.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rabbitmq
          port: 15672
