kubernetes/regional/colombia/mqtt-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mqtt-route
  namespace: staging-columbia
spec:
  parentRefs:
    - name: main-gateway
      namespace: apisix
      sectionName: mqtt
  rules:
    - backendRefs:
        - name: mosquitto
          port: 1884
